// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarRatings should render all the stars 1`] = `
<div>
  <i
    className="fas fa-star"
    key="1"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="1"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <i
    className="fas fa-star"
    key="2"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <i
    className="fas fa-star"
    key="3"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <i
    className="fas fa-star"
    key="4"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <styled.span>
    1.0
  </styled.span>
</div>
`;

exports[`StarRatings should render all the stars 2`] = `
<div>
  <i
    className="fas fa-star"
    key="1"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="2"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="2"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <i
    className="fas fa-star"
    key="3"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <i
    className="fas fa-star"
    key="4"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <styled.span>
    2.0
  </styled.span>
</div>
`;

exports[`StarRatings should render all the stars 3`] = `
<div>
  <i
    className="fas fa-star"
    key="1"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="2"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="3"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="3"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <i
    className="fas fa-star"
    key="4"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <styled.span>
    3.0
  </styled.span>
</div>
`;

exports[`StarRatings should render all the stars 4`] = `
<div>
  <i
    className="fas fa-star"
    key="1"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="2"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="3"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="4"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="4"
    style={
      Object {
        "color": "#e8e8e8",
      }
    }
  />
  <styled.span>
    4.0
  </styled.span>
</div>
`;

exports[`StarRatings should render all the stars 5`] = `
<div>
  <i
    className="fas fa-star"
    key="1"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="2"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="3"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="4"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="5"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <styled.span>
    5.0
  </styled.span>
</div>
`;

exports[`StarRatings should render half stars 1`] = `
<div>
  <i
    className="fas fa-star"
    key="1"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="2"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="3"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star"
    key="4"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <i
    className="fas fa-star-half-alt"
    key="4.5"
    style={
      Object {
        "color": "#00CDBD",
      }
    }
  />
  <styled.span>
    4.5
  </styled.span>
</div>
`;
